--- a/docs/troubleshooting.asciidoc
+++ b/docs/troubleshooting.asciidoc
@@ -134,12 +134,10 @@ writing to standard output.
 [[agent-overhead]]
 === The agent causes too much overhead
 
-A good place to start is our <<config-all-options-summary>>. There are multiple settings there with the `Performance` keyword which help you to tweak the agent for your needs.
+A good place to start is [config-all-options-summary]. There are multiple settings with the `Performance` keyword which can help you tweak the agent for your needs.
 
-The most expensive operation in the agent is typically stack trace capturing. The agent, by default only captures stack traces for spans with a duration of 5ms or more, and with a limit of 50 stack frames.
+The most expensive operation in the agent is typically stack trace capturing. The agent, by default, only captures stack traces for spans with a duration of 5ms or more, and with a limit of 50 stack frames.
+If this is too much in your environment, consider disabling stack trace capturing either partially or entirely:
 
-If this is too much in your environment, the <<config-span-frames-min-duration>> and the <<config-stack-trace-limit>> are two configuration worth looking at.
-
-By setting <<config-stack-trace-limit>> to `0` you can disable stack trace capturing completely which in most applications reduces the agent overhead dramatically.
-
-If you would like to capture stack traces for errors but skip stack trace capturing for spans, you can set the <<config-span-frames-min-duration>> to `0` and leave the <<config-stack-trace-limit>> on default.
+- To disable stack trace capturing for spans, but continue to capture stack traces for errors, set the [config-span-frames-min-duration] to `0` and leave the [config-stack-trace-limit] on its default.
+- To disable stack trace capturing entirely –which in most applications reduces the agent overhead dramatically– set [config-stack-trace-limit] to `0`.
