--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -42,17 +42,17 @@ Automatic instrumentation is supported for the following web frameworks
 |===
 |Framework |Supported versions |Integration
 
-| ASP.NET Core added[1.0]
-| 2.1+
-| <<setup-asp-net-core, NuGet package>>
+|ASP.NET Core added[1.0]
+|2.1+
+|<<setup-asp-net-core, NuGet package>>
 
-| ASP.NET (.NET Framework) in IIS  added[1.1]
-| 4.6.1+ (IIS 7.0 or newer)
-| <<setup-auto-instrumentation, Profiler auto instrumentation>>
+|ASP.NET (.NET Framework) in IIS  added[1.1]
+|4.6.1+ (IIS 7.0 or newer)
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
-  _or_
+_or_
 
-  <<setup-asp-dot-net, NuGet package>>
+<<setup-asp-dot-net, NuGet package>>
 
 |===
 
@@ -67,11 +67,11 @@ Streaming is not supported; for streaming use-cases, the agent does not create t
 |===
 |Framework |Supported versions |Integration
 
-.2+| gRPC added[1.7]
-| Grpc.Net.Client 2.23.2+ _(client side)_
-| <<setup-grpc, NuGet package>>
-| ASP.NET Core 2.1+ _(server side)_
-| <<setup-asp-net-core, NuGet package>>
+.2+.^| gRPC added[1.7]
+|Grpc.Net.Client 2.23.2+ _(client side)_
+|<<setup-grpc, NuGet package>>
+|ASP.NET Core 2.1+ _(server side)_
+|<<setup-asp-net-core, NuGet package>>
 
 |===
 
@@ -84,54 +84,54 @@ Automatic instrumentation is supported for the following data access technologie
 |===
 |Data access technology |Supported versions |Integration
 
-.3+| Azure CosmosDB added[1.11]
-| Microsoft.Azure.Cosmos 3.0.0+
-| Microsoft.Azure.DocumentDB.Core 2.4.1+
-| Microsoft.Azure.DocumentDB 2.4.1+
-.3+| <<setup-azure-cosmosdb, NuGet package>>
+.3+.^|Azure CosmosDB added[1.11]
+|Microsoft.Azure.Cosmos 3.0.0+
+.3+.^|<<setup-azure-cosmosdb, NuGet package>>
+|Microsoft.Azure.DocumentDB.Core 2.4.1+
+|Microsoft.Azure.DocumentDB 2.4.1+
 
-| Entity Framework Core added[1.0]
-| Microsoft.EntityFrameworkCore 2.x+
-| <<setup-ef-core, NuGet package>>
+|Entity Framework Core added[1.0]
+|Microsoft.EntityFrameworkCore 2.x+
+|<<setup-ef-core, NuGet package>>
 
-| Entity Framework 6 added[1.2]
-| EntityFramework 6.2+
-| <<setup-ef6, NuGet package>>
+|Entity Framework 6 added[1.2]
+|EntityFramework 6.2+
+|<<setup-ef6, NuGet package>>
 
-| Elasticsearch added[1.6]
-| Elasticsearch.Net 7.6.0+
-  NEST 7.6.0+
-| <<setup-elasticsearch, NuGet package>>
+.2+.^|Elasticsearch added[1.6]
+|Elasticsearch.Net 7.6.0+
+.2+.^|<<setup-elasticsearch, NuGet package>>
+|NEST 7.6.0+
 
-| MySQL added[1.12]
-| see profiler documentation
-| <<setup-auto-instrumentation, Profiler auto instrumentation>>
+|MySQL added[1.12]
+|See profiler documentation
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
-| MongoDB added[1.9]
-| MongoDB.Driver 2.4.4+
-| <<setup-mongo-db, NuGet package>>
+|MongoDB added[1.9]
+|MongoDB.Driver 2.4.4+
+|<<setup-mongo-db, NuGet package>>
 
-| Oracle added[1.12]
-| see profiler documentation
-| <<setup-auto-instrumentation, Profiler auto instrumentation>>
+|Oracle added[1.12]
+|See profiler documentation
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
-| PostgreSQL added[1.12]
-| see profiler documentation
-| <<setup-auto-instrumentation, Profiler auto instrumentation>>
+|PostgreSQL added[1.12]
+|See profiler documentation
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
-| Redis added[1.8]
-| StackExchange.Redis 2.0.495+
-| <<setup-stackexchange-redis, NuGet package>>
+|Redis added[1.8]
+|StackExchange.Redis 2.0.495+
+|<<setup-stackexchange-redis, NuGet package>>
 
-.2+| SqlClient
-| System.Data.SqlClient 2.0.495+ added[1.8]
-| <<setup-sqlclient, NuGet package>>
-| see profiler documentation added[1.12]
-| <<setup-auto-instrumentation, Profiler auto instrumentation>>
+.2+|SqlClient
+|System.Data.SqlClient 2.0.495+ added[1.8]
+|<<setup-sqlclient, NuGet package>>
+|See profiler documentation added[1.12]
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
-| SQLite added[1.12]
-| see profiler documentation
-| <<setup-auto-instrumentation, Profiler auto instrumentation>>
+|SQLite added[1.12]
+|See profiler documentation
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
 |===
 
@@ -144,18 +144,18 @@ We support automatic instrumentation for the following messaging systems
 |===
 |Messaging system |Supported versions |Integration
 
-.2+| Azure Service Bus added[1.10]
-| Microsoft.Azure.ServiceBus 3.0.0+
-| Azure.Messaging.ServiceBus 7.0.0+
-.2+| <<setup-azure-servicebus, NuGet package>>
+.2+.^|Azure Service Bus added[1.10]
+|Microsoft.Azure.ServiceBus 3.0.0+
+.2+.^| <<setup-azure-servicebus, NuGet package>>
+|Azure.Messaging.ServiceBus 7.0.0+
 
-| Azure Queue Storage added[1.10]
-| Azure.Storage.Queues 12.6.0+
-| <<setup-azure-storage, NuGet package>>
+|Azure Queue Storage added[1.10]
+|Azure.Storage.Queues 12.6.0+
+|<<setup-azure-storage, NuGet package>>
 
-| Kafka added[1.12]
-| see profiler documentation
-| <<setup-auto-instrumentation, Profiler auto instrumentation>>
+|Kafka added[1.12]
+|See profiler documentation
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
 |===
 
@@ -169,13 +169,10 @@ an HTTP span is automatically created for each outgoing HTTP request and tracing
 |===
 |Framework |Supported versions |Integration
 
-| System.Net.Http.HttpClient added[1.0]
-| _built-in_
-| _built-in_
-
-| System.Net.HttpWebRequest added[1.1]
-| _built-in_
-| _built-in_
+|System.Net.Http.HttpClient added[1.0]
+.2+.^|_built-in_
+.2+.^|<<setup-http,part of Elastic.Apm>>
+|System.Net.HttpWebRequest added[1.1]
 
 |===
 
@@ -188,21 +185,21 @@ Automatic instrumentation for the following cloud services
 |===
 |Cloud service |Supported versions |Integration
 
-.3+| Azure CosmosDB added[1.11]
-| Microsoft.Azure.Cosmos 3.0.0+
-| Microsoft.Azure.DocumentDB.Core 2.4.1+
-| Microsoft.Azure.DocumentDB 2.4.1+
-.3+| <<setup-azure-cosmosdb, NuGet package>>
+.3+.^|Azure CosmosDB added[1.11]
+|Microsoft.Azure.Cosmos 3.0.0+
+.3+.^| <<setup-azure-cosmosdb, NuGet package>>
+|Microsoft.Azure.DocumentDB.Core 2.4.1+
+|Microsoft.Azure.DocumentDB 2.4.1+
 
-.2+| Azure Service Bus added[1.10]
-| Microsoft.Azure.ServiceBus 3.0.0+
-| Azure.Messaging.ServiceBus 7.0.0+
-.2+| <<setup-azure-servicebus, NuGet package>>
+.2+.^|Azure Service Bus added[1.10]
+|Microsoft.Azure.ServiceBus 3.0.0+
+.2+.^| <<setup-azure-servicebus, NuGet package>>
+|Azure.Messaging.ServiceBus 7.0.0+
 
-.3+| Azure Storage added[1.10]
-| Azure.Storage.Blobs 12.6.0+
-| Azure.Storage.Queues 12.6.0+
-| Azure.Storage.Files.Shares 12.6.0+
-.3+| <<setup-azure-storage, NuGet package>>
+.3+.^|Azure Storage added[1.10]
+|Azure.Storage.Blobs 12.8.0+
+.3+.^| <<setup-azure-storage, NuGet package>>
+|Azure.Storage.Queues 12.6.0+
+|Azure.Storage.Files.Shares 12.6.0+
 
 |===
