--- a/docs/setup-auto-instrumentation.asciidoc
+++ b/docs/setup-auto-instrumentation.asciidoc
@@ -36,12 +36,9 @@ and instruments the following assemblies
 
 include::integrations.asciidoc[]
 
-Note that NuGet package versions do not necessarily align with the version of assemblies contained therein. 
-https://nuget.info/packages[NuGet package explorer] can be used to inspect the assembly version of assemblies within a NuGet package.
-
 [IMPORTANT]
 --
-The .NET CLR Profiling API allows only one profiler to be attached to a .NET process. In light of this limitation, only one
+**The .NET CLR Profiling API allows only one profiler to be attached to a .NET process**. In light of this limitation, only one
 solution that uses the .NET CLR profiling API should be used by an application.
 
 Auto instrumentation using the .NET CLR Profiling API can be used in conjunction with 
@@ -188,7 +185,7 @@ Set-ItemProperty HKLM:SYSTEM\CurrentControlSet\Services\<service-name> -Name Env
 was unzipped
 <2> `<service-name>` is the name of the Windows service.
 
-With PowerShell
+The service must then be restarted for the change to take effect. With PowerShell
 
 [source,powershell]
 ----
@@ -209,12 +206,13 @@ pool using https://docs.microsoft.com/en-us/iis/get-started/getting-started-with
 ----
 $appcmd = "$($env:systemroot)\system32\inetsrv\AppCmd.exe"
 $appPool = "<application-pool>" <1>
+$profilerHomeDir = "<unzipped directory>" <2>
 $environment = @{
   COR_ENABLE_PROFILING = "1"
   COR_PROFILER = "{FA65FE15-F085-4681-9B20-95E04F6C03CC}"
-  COR_PROFILER_PATH = "<unzipped directory>\elastic_apm_profiler.dll" <2>
-  ELASTIC_APM_PROFILER_HOME = "<unzipped directory>"
-  ELASTIC_APM_PROFILER_INTEGRATIONS = "<unzipped directory>\integrations.yml"
+  COR_PROFILER_PATH = "$profilerHomeDir\elastic_apm_profiler.dll"
+  ELASTIC_APM_PROFILER_HOME = "$profilerHomeDir"
+  ELASTIC_APM_PROFILER_INTEGRATIONS = "$profilerHomeDir\integrations.yml"
   COMPlus_LoaderOptimization = "1" <3>
 }
 
@@ -222,8 +220,8 @@ $environment.Keys | ForEach-Object {
   & $appcmd set config -section:system.applicationHost/applicationPools /+"[name='$appPool'].environmentVariables.[name='$_',value='$($environment[$_])']"  
 }
 ----
-<1> `<application-pool>` is the name of the Application Pool your application uses
-<2> `<unzipped directory>` is the directory to which the zip file
+<1> `<application-pool>` is the name of the Application Pool your application uses. For example, `IIS APPPOOL\DefaultAppPool`
+<2> `<unzipped directory>` is the full path to the directory in which the zip file
 was unzipped
 <3> Forces assemblies **not** to be loaded domain-neutral. There is currently a limitation
 where Profiler auto-instrumentation cannot instrument assemblies when they are loaded
@@ -235,20 +233,21 @@ around by setting this environment variable. See the https://docs.microsoft.com/
 ----
 $appcmd = "$($env:systemroot)\system32\inetsrv\AppCmd.exe"
 $appPool = "<application-pool>" <1>
+$profilerHomeDir = "<unzipped directory>" <2>
 $environment = @{
   CORECLR_ENABLE_PROFILING = "1"
   CORECLR_PROFILER = "{FA65FE15-F085-4681-9B20-95E04F6C03CC}"
-  CORECLR_PROFILER_PATH = "<unzipped directory>\elastic_apm_profiler.dll" <2>
-  ELASTIC_APM_PROFILER_HOME = "<unzipped directory>"
-  ELASTIC_APM_PROFILER_INTEGRATIONS = "<unzipped directory>\integrations.yml"
+  CORECLR_PROFILER_PATH = "$profilerHomeDir\elastic_apm_profiler.dll"
+  ELASTIC_APM_PROFILER_HOME = "$profilerHomeDir"
+  ELASTIC_APM_PROFILER_INTEGRATIONS = "$profilerHomeDir\integrations.yml"
 }
 
 $environment.Keys | ForEach-Object {
   & $appcmd set config -section:system.applicationHost/applicationPools /+"[name='$appPool'].environmentVariables.[name='$_',value='$($environment[$_])']"  
 }
 ----
-<1> `<application-pool>` is the name of the Application Pool your application uses
-<2> `<unzipped directory>` is the directory to which the zip file
+<1> `<application-pool>` is the name of the Application Pool your application uses. For example, `IIS APPPOOL\DefaultAppPool`
+<2> `<unzipped directory>` is the full path to the directory in which the zip file
 was unzipped
 
 [IMPORTANT]
@@ -302,14 +301,24 @@ systemctl reload-or-restart <service>
 ----
 
 [float]
+[[profiler-configuration]]
 === Profiler environment variables
 
 The profiler auto instrumentation has its own set of environment variables to manage
-the instrumentation
+the instrumentation. These are used in addition to <<configuration, agent configuration>> 
+through environment variables.
+
 
 `ELASTIC_APM_PROFILER_HOME`::
 
-The home directory of the profiler auto instrumentation.
+The home directory of the profiler auto instrumentation. The home directory typically 
+contains 
+
+* platform specific profiler assemblies
+* a directory for each compatible target framework, where each directory contains
+supporting managed assemblies for auto instrumentation.
+* an integrations.yml file that determines which methods to target for
+auto instrumentation
 
 `ELASTIC_APM_PROFILER_INTEGRATIONS` _(optional)_::
 
@@ -321,7 +330,7 @@ environment variable.
 `ELASTIC_APM_PROFILER_EXCLUDE_INTEGRATIONS` _(optional)_::
 
 A semi-colon separated list of integrations to exclude from auto-instrumentation.
-Valid values are those defined in the `Integration` column in the integrations
+Valid values are those defined in the `Integration name` column in the integrations
 table above.
 
 `ELASTIC_APM_PROFILER_EXCLUDE_PROCESSES` _(optional)_::
@@ -334,8 +343,8 @@ applications that should not be.
 `ELASTIC_APM_PROFILER_EXCLUDE_SERVICE_NAMES` _(optional)_::
 
 A semi-colon separated list of APM service names to exclude from auto-instrumentation.
-Values defined are checked against the value of `ELASTIC_APM_SERVICE_NAME` environment
-variable.
+Values defined are checked against the value of <<config-service-name,`ELASTIC_APM_SERVICE_NAME`>>
+environment variable.
 
 `ELASTIC_APM_PROFILER_LOG` _(optional)_::
 
@@ -362,3 +371,13 @@ The directory in which to write profiler log files. If unset, defaults to
 If the default directory cannot be written to for some reason, the profiler
 will try to write log files to a `logs` directory in the home directory specified 
 by `ELASTIC_APM_PROFILER_HOME` environment variable.
+
+`ELASTIC_APM_PROFILER_LOG_TARGETS` _(optional)_::
+
+A semi-colon separated list of targets for profiler logs. Valid values are
+
+* file
+* stdout
+
+The default value is `file`, which logs to the directory specified by
+`ELASTIC_APM_PROFILER_LOG_DIR` environment variable.
